Fixes #12129, use middle for v-alignment
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@23809 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid.css
+++ b/grid/resources/Grid.css
@@ -400,7 +400,7 @@
 
 /* Tree Grid */
 .dojoxGridExpandoCell {
-	vertical-align: top;
+	vertical-align: middle;
 }
 .dojoxGridSummarySpan {
 	visibility: hidden;
